[package]
name = "pahe-search-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
dotenv = "0.15.0"
poise = "0.5.2"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.91"
structstruck = "0.3.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
